--- a/sockettictactoe/views/index.ejs
+++ b/sockettictactoe/views/index.ejs
@@ -13,19 +13,19 @@
   <title>Interactive Tic-Tac-Toe</title>
 </head>
 <body>
-
+  <h1 class="text-center">Tic-Tac-Toe With A Friend <button id="play" class="btn btn-success">Play</button> </h1>
   <div id="scores">
-  <h1 class="text-center">Tic-Tac-Toe With A Friend</h1>
+  
 
   <div class="row">
       <div class="col-xs-3 col-xs-offset-1">
-        <p id="p1" class="text-center player">Player 1-X</p>
+        <p id="p1" class="text-center player">Player 1-X <small><span id="scr1"></span></small></p>
       </div>
       <div class="col-xs-2 col-xs-offset-1">
         <button id="reset" class="text-center player btn btn-default">Reset</button>
       </div>
       <div class="col-xs-3 col-xs-offset-1">
-        <p id="p2" class="text-center player">Player 2-O</p>
+        <p id="p2" class="text-center player">Player 2-O <small><span id="scr2"></span></small></p>
       </div>
     </div> <br>
     
